Finished creating my website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="./src//output.css" rel="stylesheet">
   <title>KELIFE - Making Life Easier</title>
 </head>
 <body class="bg-gray-100">
@@ -18,13 +18,13 @@
       </div>
       <ul class="w-full flex p-3 flex-row justify-between">
         <li class="text-white text-lg font-bold hover:text-yellow-400">
-          <a href="index.html" class="text-yellow-400">Home</a>
+          <a href="./src/index.js" class="text-yellow-400">Home</a>
         </li>
         <li class="text-white text-lg font-bold hover:text-yellow-400">
-          <a href="about.html">About</a>
+          <a href="./src/about.html">About</a>
         </li>
         <li class="text-white text-lg font-bold hover:text-yellow-400">
-          <a href="contact.html">Contact Us</a>
+          <a href="./src/contact.html">Contact Us</a>
         </li>
       </ul>
     </nav>
@@ -81,5 +81,5 @@
 
 
 </body>
-<script src="index.js" ></script>
+<script src="./src/index.js" ></script>
 </html>
