--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
 
         <ul class="w-full flex p-3 flex-row justify-between">
           <li class="text-white text-lg font-bold hover:text-yellow-400">
-            <a class="active:text-red-700" href="index.html">Home</a>
+            <a class="active:text-red-700" href="../index.html">Home</a>
           </li>
           <li class="text-white text-lg font-bold hover:text-yellow-400">
             <a href="about.html" class="text-yellow-400"> About </a>
