--- a/src/contact.html
+++ b/src/contact.html
@@ -17,7 +17,7 @@
             
             <ul class="w-full flex  p-3 flex-row justify-between">
                 <li class="text-white text-lg font-bold hover:text-yellow-400">
-                <a href="index.html">Home</a>    
+                <a href="../index.html">Home</a>    
              
                 </li>
                 <li class="text-white text-lg font-bold hover:text-yellow-400">
