edits paths correcly in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="flex bg-black p-3 w-full justify-center items-center">
       <div class="flex flex-row justify-center items-end h-full space-x-3">
-        <img src="../assets/leaf.jpeg" class="h-20 w-20 rounded-full" />
+        <img src="./assets/leaf.jpeg" class="h-20 w-20 rounded-full" />
         <p id="headerText" class="text-white italic transition-all duration-500 ease-in-out">
           <span class="text-yellow-400 font-bold">KELIFE</span> Making Life Easier
         </p>
@@ -49,7 +49,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-6">
       <!-- Product Cards -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden text-center p-4">
-        <img src="../assets/software3.jpeg" alt="Software 1" class="w-full h-[200px] object-cover rounded-lg">
+        <img src="./assets/software3.jpeg" alt="Software 1" class="w-full h-[200px] object-cover rounded-lg">
         <h2 class="text-lg font-bold mt-3">Mobile App</h2>
         <p class="text-gray-600">React Native Apps for Nativeness..</p>
         <button class="bg-orange-500 p-3 rounded-lg text-white hover:bg-blue-600 product-btn">
@@ -58,7 +58,7 @@
       </div>
 
       <div class="bg-white shadow-lg rounded-lg overflow-hidden text-center p-4">
-        <img src="../assets/network1.jpeg" alt="Software 2" class="w-full h-[200px] object-cover rounded-lg">
+        <img src="./assets/network1.jpeg" alt="Software 2" class="w-full h-[200px] object-cover rounded-lg">
         <h2 class="text-lg font-bold mt-3">Security</h2>
         <p class="text-gray-600">We integrate Firewalls and add VPNs to organication Networks.</p>
         <button class="bg-orange-500 p-3 rounded-lg text-white hover:bg-blue-600 product-btn">
@@ -67,7 +67,7 @@
       </div>
 
       <div class="bg-white shadow-lg rounded-lg overflow-hidden text-center p-4">
-        <img src="../assets/software1.jpeg" alt="Software 3" class="w-full h-[200px] object-cover rounded-lg">
+        <img src="./assets/software1.jpeg" alt="Software 3" class="w-full h-[200px] object-cover rounded-lg">
         <h2 class="text-lg font-bold mt-3">Web Apps 3</h2>
         <p class="text-gray-600">A trusted organisation for robust web applications.</p>
         <button class="bg-orange-500 p-3 rounded-lg text-white hover:bg-blue-600 product-btn">
