--- a/src/contact.html
+++ b/src/contact.html
@@ -103,4 +103,9 @@
         document.getElementById("contactForm").reset();
     });
 </script>
+<footer class="bg-black w-full h-[300px] flex items-center justify-center mt-12">
+    <p class="text-white text-xl">&copy; 2025 Kelife</p>
+  </footer>
+  
+
 </html>
