app allows user to view movies, book movies and delete tickets

--- a/tickets.html
+++ b/tickets.html
@@ -58,7 +58,7 @@
   </footer>
 
   <!-- External JavaScript -->
-  <script src="movies.js"></script>
+  <script src="tickets.js"></script>
 
 </body>
 </html>
